# hanako

./: .editorconfig  .gitignore  pylintrc  pyproject.toml
src/hanako/: __init__.py  app.py  collections.py  context.py  exceptions.py  hitomi.py  main.py  models.py  monads.py  widgets.py
src/hanako/app/: __init__.py  dependencies.py  desktop.py  hanako.py  root_widget.kv  root_widget.py  router.py  settings.py
src/hanako/app/routers/: default.py  endpoint.py  settings.py  viewer.py
src/hanako/app/screens/: __init__.py  main.kv  main.py
src/hanako/app/uix/: __init__.py  behaviors.py  image_button.py  manga_detail.kv  manga_detail.py  root.py  screens.py
src/hanako/app/widgets/: __init__.py  base.py  root.py  screens.py
src/hanako/command/: __init__.py  commands.py  context.py  events.py  exceptions.py  gallery_service.py  handler.py  hitomi_downloader.py  hitomi_fetcher.py  hitomi_service.py  manga_cache.py  manga_downloader.py  manga_service.py
src/hanako/domain/: __init__.py  enums.py  exceptions.py  manga.py  pool.py  pool_entry.py
src/hanako/domain/models/: __init__.py  gallery.py  hitomi.py
src/hanako/drivers/: __init__.py  hitomi.py  in_memory_message_queue.py  orm.py  pubsub.py  sql_database.py  sql_manga_repository.py  sql_manga_storage.py
src/hanako/infrastructure/: __init__.py  file_exporter.py  gg.py  hitomi.py  hitomi_gallery_service.py  hitomi_manga_downloader.py  http_client.py  http_hitomi_downloader.py  http_hitomi_fetcher.py  http_hitomi_service.py  local_filesystem.py  local_manga_cache.py  orm.py  sql_database.py  sql_manga_repository.py  sql_manga_storage.py  sqlite_database.py  sqlite_repository.py  sqlite_storage.py
src/hanako/interface/: __init__.py  app.py
src/hanako/interface/widgets/: __init__.py  screens.py
src/hanako/interfaces/: __init__.py  database.py  hitomi.py  manga.py  manga_service.py  message.py
src/hanako/query/: __init__.py  context.py  handler.py  queries.py  views.py
tests/: conftest.py  test_hitomi.py
tests/command/: conftest.py  test_handler.py
tests/domain/: test_manga.py  test_pool_entry.py
tests/drivers/: test_hitomi.py
tests/infrastructure/: conftest.py  test_file_exporter.py  test_hitomi_gallery_service.py  test_hitomi_manga_downloader.py  test_http_hitomi_fetcher.py  test_http_hitomi_service.py  test_local_filesystem.py  test_sqlite_database.py  test_sqlite_repository_and_storage.py
