[tool.poetry]
name = "hanako"
version = "0.1.0"
description = "Cross-platform media client"
authors = ["misut <pkr5207@gmail.com>"]
license = "MIT"
packages = [
    { include = "hanako", from = "src" }
]

readme = "README.md"
repository = "https://github.com/misut/hanako.git"


[tool.poetry.dependencies]
python = "^3.10"
kivy = {extras = ["base"], version = "^2.1.0"}
pydantic = "^1.10.4"
js2py = "^0.74"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pylint = "^2.15.9"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"


[tool.poetry.scripts]
hanako = "hanako.main:run"


[tool.poe.tasks]
_black = "black ."
_isort = "isort ."
format = ["_black", "_isort"]

_pytest = "pytest -vvsx tests"
unittest = ["_pytest"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
