[tool.poetry]
name = "hanako"
version = "0.1.0"
description = "Cross-platform media client"
authors = ["misut <pkr5207@gmail.com>"]
license = "MIT"
packages = [
    { include = "hanako", from = "src" }
]

readme = "README.md"
repository = "https://github.com/misut/hanako.git"


[tool.coverage.run]
branch = true
[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod"
]
fail_under = 90
show_missing = true
skip_covered = true
skip_empty = true


[tool.isort]
profile = "black"


[tool.mypy]
plugins = "pydantic.mypy, sqlalchemy.ext.mypy.plugin"
pretty = true


[tool.poetry.dependencies]
python = "^3.10"
kivy = {extras = ["base"], version = "^2.1.0"}
pydantic = "^1.10.4"
js2py = "^0.74"
loguru = "^0.6.0"
sqlalchemy = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pylint = "^2.15.9"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"


[tool.poetry.scripts]
hanako = "hanako.main:run"


[tool.poe.tasks]
_black = "black ."
_isort = "isort ."
format = ["_black", "_isort"]

unittest = "pytest -vvsx tests"
coverage = "pytest --cov=src/hanako tests"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
