[tool.poetry]
name = "hanako"
version = "0.1.0"
description = "Cross-platform media client"
authors = ["misut <pkr5207@gmail.com>"]
license = "MIT"
packages = [
    {include = "hanako", from = "src"}
]

readme = "README.md"
repository = "https://github.com/misut/hanako.git"

[tool.coverage.run]
branch = true
[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod"
]
fail_under = 90
show_missing = true
skip_covered = true
skip_empty = true

[tool.isort]
profile = "black"

[tool.mypy]
enable_incomplete_feature = ["TypeVarTuple"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
pretty = true

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aiofiles = "^23.1.0"
flet = "^0.4.0"
httpx = "^0.23.3"
js2py = "^0.74"
kyrie = {path = "packages/kyrie", develop = true}
loguru = "^0.6.0"
pydantic = "^1.10.4"
sqlalchemy = {extras = ["aiosqlite", "asyncio", "mypy"], version = "^2.0.3"}
tenacity = "^8.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.11.4"
mypy = "^1.0.0"
pyinstaller = "5.7.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
types-aiofiles = "^22.1.0.7"

[tool.poetry.scripts]
hanako = "hanako.main:run"

[tool.poe.tasks]
_black = "black ."
_isort = "isort ."
format = ["_black", "_isort"]

fasttest = "pytest -vvsx tests"
typetest = "mypy src tests"
unittest = "pytest -vvsx --slow tests"
coverage = "pytest --cov=src/hanako tests"

build = "flet pack src/hanako/main.py"

[tool.pytest.ini_options]
markers = ["slow"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
